# building-an-index

./: Cargo.toml  LICENSE  README.md
proptest-regressions/backends/: zip.txt
src/: benchmark.rs  chart.rs  data_gen.rs  lib.rs  main.rs  store.rs
src/backends/: dat_btree.rs  dat_hash.rs  mod.rs  sqlite.rs  zip.rs
